--- a/styles/base.css
+++ b/styles/base.css
@@ -1,34 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
-
-/* Root rules to apply to all aspects of the CSS */
-:root {
-    --primary-color: #333;
-    --secondary-color: #2828cc;
-    --accent1-color: #bfbfd9;
-    --accent2-color: #f1ebff;
-
-    /* fonts */
-    --heading-font: "IM Fell French Canon SC";
-    --paragraph-font: Lato, Helvetica, sans-serif;
-
-    --paragraph-background-color: #333;
-    --nav-link-color: #f1ebff;
-    --nav-background-color: #333;
-    --nav-hover-link-color: #f1ebff;
-    --nav-hover-background-color: #9999ea;
-}
-
-/****************************************************************
-*
-* Default tag properties *
-*
-*****************************************************************/
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 body {
-    font-family: var(--paragraph-font);
+    font-family: 'Poppins', 'Helvetica';
+    max-width: 1600px;
+    margin: 0 auto;
     font-size: 20px;
-    color: var(--accent3-color);
     background-color: #333;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -38,97 +14,99 @@ header {
     display: grid;
     grid-column: 1/6;
     padding: 20px 25px;
-    margin: -20px -10px 20px -10px;
     background-color: rgb(46, 46, 255);
 }
 
 #profile {
     display: grid;
     grid-column: 1/2;
-    margin: 15px;
-    margin-left: 300px;
+    margin: auto;
 }
 
 h1 {
     display: grid;
     grid-column: 2/3;
-    margin-top: 100px;
+    margin: auto;
+    margin-left: 25px;
+    font-size: 2.5em;
 }
 
 nav {
     display: grid;
     grid-column: 1/6;
+    font-size: larger;
     align-self: center;
-    margin: -20px -10px 30px -10px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.404);
 }
 
 .navlink {
     grid-column: 2/3;
     color: #f1ebff;
     padding: 18px;
+    align-items: center;
+    text-decoration: none;
+}
+
+main {
+    display: grid;
+    grid-column: 1/6;
+    background-color: antiquewhite;
+    color: #333;
+    padding: 2%;
 }
 
 h2 {
-    grid-column: 2/6;
+    color: #333;
+    margin: auto;
+    font-size: 1.8em;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: var(--heading-font);
-    font-weight: 700;
-    color: var(--accent2-color);
+h2:after {
+    content: ' ';
+    display: block;
+    border: 1.5px solid black;
 }
 
-h1 {
-    font-size: 2.5em;
-}
-
-h2 {
-    font-size: 2em;
+.card {
+    display: grid;
+    margin-top: 1.5rem;
 }
 
 h3 {
-    font-size: 1.75em;
-}
-
-h4 {
+    margin: auto;
+    border: 2px black;
     font-size: 1.5em;
+    background-color: #2828cc;
+    color: black;
+    padding: 10px;
+    border-radius: 15px;
 }
 
-h5 {
-    font-size: 1.25em;
+a {
+    grid-column: 2/3;
+    color: #333;
+    padding: 18px;
+    align-items: center;
+    text-decoration: none;
 }
 
-h6 {
-    font-size: .75em;
+ul {
+    padding: 50px;
+    margin: auto;
+    margin-left: 2rem;
 }
 
-img {
-    max-width: 100%;
+
+footer {
+    display: grid;
+    grid-column: 3/4;
+    justify-content: center;
+    padding: 20px;
+    margin: auto;
 }
 
 p {
     padding: 0;
     margin: 0;
-    color: var(--accent1-color);
-}
-
-a {
-    text-decoration: none;
-}
-
-/****************************************************************
-* *
-* default properties for all pages *
-* *
-*****************************************************************/
-
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
+    color: #f1ebff;
 }
