--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 body {
-    font-family: 'Poppins', 'Helvetica';
+    font-family: 'Poppins', sans-serif;
     max-width: 1600px;
     margin: 0 auto;
     font-size: 20px;
