--- a/styles/base.css
+++ b/styles/base.css
@@ -39,6 +39,10 @@ nav {
     font-size: larger;
 }
 
+nav a:hover {
+    text-decoration: underline;
+}
+
 .navlink {
     grid-column: 2/3;
     color: #f1ebff;
@@ -90,6 +94,10 @@ a {
     text-decoration: none;
 }
 
+.card a:hover {
+    text-decoration: underline;
+}
+
 ul {
     padding: 50px;
     margin: auto;
@@ -98,15 +106,14 @@ ul {
 
 
 footer {
-    display: grid;
-    grid-column: 2/3;
+    display: flex;
     justify-content: center;
     padding: 20px;
-    margin: auto;
+    margin: 25px;
 }
 
 p {
-    padding: 0;
+    padding: 10px;
     margin: 0;
     color: #f1ebff;
 }
