attempt to improve navigation bar

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -17,7 +17,7 @@
 
     .navigation a {
         display: flex !important;
-        flex-direction: row;
+        flex-direction: row !important;
     }
 
     /********************************************/
