--- a/styles/base.css
+++ b/styles/base.css
@@ -47,7 +47,7 @@ h1 {
 
 .navigation {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     list-style: none;
     background-color: #333;
     color: #fff;
