--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 :root {
     --primary-color: #135290;
@@ -27,7 +27,7 @@
 }
 
 #content {
-    max-width: 1200px;
+    max-width: 500px;
     margin: 0 auto;
     font-size: 18px;
     text-align: center;
@@ -35,18 +35,12 @@
 }
 
 /*HEADING SECTION*/
-
 header {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     background-color: var(--nav-background-color);
     color: var(--nav-link-color);
     padding: 2em;
-}
-
-.logo {
-    grid-column: 1/4;
-    grid-row: 1/2;
 }
 
 a {
@@ -62,28 +56,40 @@ a:hover {
     padding: 20px;
 }
 
-.join {
-    grid-column: 4/6;
-    grid-row: 1/2;
+#ham {
+    font-size: 1.5rem;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    padding: 0.25rem 0.75rem;
+    background-color: var(--accent2-color);
+    color: #000;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
 }
 
-nav {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    background-color: var(--nav-background-color);
-    padding: 1em;
+#ham::before {
+    content: "☰";
 }
 
-.menu {
-    grid-column: 1/2;
+#ham.open::before {
+    content: "❎";
 }
 
-.discover {
-    grid-column: 2/3;
+.open a {
+    display: block;
 }
 
-.directory {
-    grid-column: 3/4;
+.navigation {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
+
+.navigation a {
+    display: none;
+    padding: 1rem;
+    text-align: center;
+    text-decoration: none;
 }
 
 /*HERO SECTION*/
@@ -101,8 +107,8 @@ nav {
 
 main {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
 }
 
 #current-event {
@@ -117,7 +123,7 @@ main {
 }
 
 #ads-carrousel {
-    grid-column: 1/4;
+    grid-column: 1/2;
     grid-row: 3/4;
 }
 
@@ -125,17 +131,18 @@ main {
 
 footer {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+
     padding: 1em;
     justify-content: center;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.808);
     color: var(--paragraph-background-color);
 }
 
 #description {
-    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 #social {
-    grid-column: 2/3;
+    grid-row: 2/3;
 }
