--- a/styles/base.css
+++ b/styles/base.css
@@ -47,7 +47,7 @@ h1 {
 
 .navigation {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     list-style: none;
     background-color: #333;
     color: #fff;
@@ -85,6 +85,39 @@ nav a:hover {
     padding: 18px;
     align-items: center;
     text-decoration: none;
+}
+
+/*Hero*/
+.hero {
+    margin: 10px auto;
+    position: relative;
+    border: 1px solid rgba(0, 0, 0, .1);
+    height: 350px;
+}
+
+.hero img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.herolabel {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    background: radial-gradient(#ffffff7c, #4d5b9744);
+    border: 1px solid rgba(0, 0, 0, .75);
+    padding: 1.5rem;
+    box-shadow: 0 0 3rem #ffffffc5;
+    opacity: 0.85;
+}
+
+.herolabel p {
+    margin: 0;
+    padding: .25rem;
+    font-weight: 700;
+    font-size: 1.5rem;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 main {
