--- a/lesson05/styles/bom.css
+++ b/lesson05/styles/bom.css
@@ -1,29 +1,69 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
-
-body {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    font-family: 'Poppins', sans-serif;
-    margin: 0 auto;
-    font-size: 20px;
-    background-color: ivory;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-div {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column: 2/3;
-    justify-items: center;
-    padding: 3em;
-    background-color: lightskyblue;
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: Acme, Arial, sans-serif;
 }
 
 h1 {
-    grid-column: 2/3;
-    grid-row: 2/3;
+    font-size: 1.5rem;
 }
 
 main {
-    grid-column: 2/3;
-    grid-row: 3/4;
+    margin: 1rem auto;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    background-color: #ddd;
+    display: flex;
+    flex-direction: column;
+}
+
+input,
+button {
+    padding: 0.5rem;
+}
+
+button {
+    margin: 0.5rem;
+}
+
+.delete {
+    width: fit-content;
+}
+
+.input {
+    display: flex;
+    gap: 1rem;
+}
+
+.list {
+    padding: 0.5rem;
+}
+
+ul {
+    margin: 1rem;
+    list-style: none;
+}
+
+li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@media only screen and (min-width: 32.5em) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    main {
+        width: 320px;
+    }
 }
