--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -56,22 +56,22 @@ a:hover {
     padding: 20px;
 }
 
-#ham {
+#menu {
     font-size: 1.5rem;
     border: 1px solid rgba(0, 0, 0, 0.3);
     padding: 0.25rem 0.75rem;
     background-color: var(--accent2-color);
     color: #000;
     position: absolute;
-    top: 1rem;
-    right: 1rem;
+    top: 3rem;
+    right: 2rem;
 }
 
-#ham::before {
+#menu::before {
     content: "☰";
 }
 
-#ham.open::before {
+#menu.open::before {
     content: "❎";
 }
 
@@ -83,6 +83,8 @@ a:hover {
     display: flex;
     flex-direction: column;
     list-style: none;
+    background-color: var(--nav-background-color);
+    color: var(--nav-hover-background-color);
 }
 
 .navigation a {
@@ -90,7 +92,29 @@ a:hover {
     padding: 1rem;
     text-align: center;
     text-decoration: none;
+    color: var(--nav-link-color);
 }
+
+.open a {
+    display: block;
+}
+
+#active::before {
+    content: "➡";
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+.navlink {
+    grid-column: 2/3;
+    color: #f1ebff;
+    padding: 18px;
+    align-items: center;
+    text-decoration: none;
+}
+
 
 /*HERO SECTION*/
 
