--- a/styles/larger.css
+++ b/styles/larger.css
@@ -30,12 +30,14 @@
     /********************************************/
     main {
         display: grid;
-        grid-template-columns: 1fr;
-
-        grid-column: 1/6;
+        grid-template-columns: repeat(6, 1fr);
         background-color: antiquewhite;
         color: #333;
         padding: 2%;
+    }
+
+    h2 {
+        grid-column: 1/7;
     }
 
     ul {
@@ -46,6 +48,16 @@
         margin-top: 1.5rem;
         border: 2px solid #333;
         border-radius: 15px;
+    }
+
+    section:nth-of-type(1) {
+        grid-column: 1/3;
+        margin: 2em .6em;
+    }
+
+    section:nth-of-type(2) {
+        grid-column: 3/7;
+        margin: 2em .6em;
     }
 
     iframe {
