--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -116,13 +116,37 @@ nav a:hover {
 
 /*HERO SECTION*/
 
-#hero {
-    display: block;
-    margin: 0 auto;
+/*Hero*/
+.hero {
+    margin: 1px auto;
+    position: relative;
+    border: .5px solid rgba(0, 0, 0, .1);
+    height: 350px;
 }
 
-#hero-box {
-    margin: 2px;
+.hero img {
+    width: 100%;
+    height: 75%;
+    object-fit: cover;
+}
+
+.herolabel {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    background: radial-gradient(#ffffff7c, #4d5b9744);
+    border: 1px solid rgba(0, 0, 0, .75);
+    padding: 1.5rem;
+    box-shadow: 0 0 3rem #ffffffc5;
+    opacity: 0.85;
+}
+
+.herolabel p {
+    margin: 0;
+    padding: .25rem;
+    font-weight: 700;
+    font-size: 1.5rem;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 /*MAIN SECTION*/
@@ -145,8 +169,15 @@ main {
 }
 
 #ads-carrousel {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 3/4;
+}
+
+#ads-carrousel img {
+    width: 50%;
+    height: 50%;
+    border: solid rgba(0, 0, 0, .75);
+    margin: 10px;
 }
 
 /*FOOTER SECTION*/
