--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Roboto+Slab&display=swap');
-@media screen and (min-width:500px) {
+@media screen and (min-width:850px) {
     :root {
         --primary-color: #135290;
         --secondary-color: #342E37;
@@ -110,15 +109,18 @@
         /* hide hamburger button */
     }
 
-    /*HERO SECTION*/
-
-    #hero {
-        display: block;
-        margin: 0 auto;
+    /*Hero*/
+    .hero {
+        margin: 5px auto;
+        position: relative;
+        border: 1px solid rgba(0, 0, 0, .1);
+        height: 350px;
     }
 
-    #hero-box {
-        margin: 2px;
+    .hero img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     /*MAIN SECTION*/
@@ -140,9 +142,10 @@
         grid-row: 1/3;
     }
 
-    #ads-carrousel {
-        grid-column: 1/4;
-        grid-row: 3/4;
+    #ads-carrousel img {
+        width: 25%;
+        height: 25%;
+        margin: 25px;
     }
 
     /*FOOTER SECTION*/
