--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -195,6 +195,59 @@ p {
     text-align: center;
 }
 
+/*FORM SECTION*/
+
+.form {
+    display: block;
+    padding: 1rem;
+}
+
+fieldset {
+    display: contents;
+}
+
+.divisions {
+    padding: 1rem;
+}
+
+.top input {
+    height: 45px;
+    border-radius: 10px;
+}
+
+
+.top {
+    display: block;
+    border: 1px solid black;
+    padding: 1rem;
+    text-align: left;
+}
+
+.level {
+    display: block;
+    border: 1px solid black;
+    padding: 1rem;
+    text-align: left;
+}
+
+#businessOrg {
+    width: auto;
+    max-width: 350px;
+}
+
+.benefits {
+    text-align: left;
+    margin: 2rem;
+}
+
+button {
+    text-decoration: none;
+    padding: 1rem 2rem;
+    background-color: var(--accent1-color);
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
 /*FOOTER SECTION*/
 
 footer {
