--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -148,6 +148,57 @@
         margin: 25px;
     }
 
+    /*FORM SECTION*/
+
+    .form {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        padding: 1rem;
+    }
+
+    fieldset {
+        display: block;
+    }
+
+    .divisions {
+        padding: 1rem;
+    }
+
+    .top input {
+        height: 45px;
+        border-radius: 10px;
+    }
+
+
+    .top {
+        display: block;
+        border: 1px solid black;
+        padding: 1rem;
+        text-align: left;
+    }
+
+    .level {
+        display: block;
+        border: 1px solid black;
+        padding: 1rem;
+        text-align: left;
+    }
+
+    .benefits {
+        text-align: left;
+        margin: 2rem;
+    }
+
+    button {
+        text-decoration: none;
+        padding: 1rem 2rem;
+        background-color: var(--accent1-color);
+        border: 1px solid black;
+        border-radius: 10px;
+    }
+
+
     /*FOOTER SECTION*/
 
     footer {
