members.js and styles applied

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -148,6 +148,26 @@
         margin: 25px;
     }
 
+    /*DIRECTORY SECTION*/
+    #cards {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    }
+
+    section {
+        margin: 0.25rem;
+        padding: 0.35rem;
+        background-color: #eee;
+        border: 1px solid #bbb;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    section>p {
+        padding: .3rem;
+    }
+
     /*FORM SECTION*/
 
     .form {
