styles and JS for members info on Directory page were fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -116,7 +116,6 @@ nav a:hover {
 
 /*HERO SECTION*/
 
-/*Hero*/
 .hero {
     margin: 1px auto;
     position: relative;
@@ -193,6 +192,26 @@ main {
 p {
     margin: 1em;
     text-align: center;
+}
+
+/*DIRECTORY SECTION*/
+#cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    padding: 3rem;
+}
+
+section {
+    margin: 0.25rem;
+    padding: 0.35rem;
+    border: 1px solid #bbb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+section>p {
+    padding: .3rem;
 }
 
 /*FORM SECTION*/
