--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -152,12 +152,12 @@
     #cards {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        padding: 3rem;
     }
 
     section {
         margin: 0.25rem;
         padding: 0.35rem;
-        background-color: #eee;
         border: 1px solid #bbb;
         display: flex;
         flex-direction: column;
@@ -222,19 +222,19 @@
     /*FOOTER SECTION*/
 
     footer {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        padding: 1em;
+        display: flex;
         justify-content: center;
-        background-color: black;
+        background-color: rgba(0, 0, 0, 0.808);
         color: var(--paragraph-background-color);
     }
 
     #description {
-        grid-column: 1/2;
+        margin: 1rem;
+        padding-right: 10rem;
     }
 
     #social {
-        grid-column: 2/3;
+        margin: 1rem;
+        padding: 1rem;
     }
 }
