--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -152,18 +152,19 @@
 
     footer {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
+
         padding: 1em;
         justify-content: center;
-        background-color: black;
+        background-color: rgba(0, 0, 0, 0.808);
         color: var(--paragraph-background-color);
     }
 
     #description {
-        grid-column: 1/2;
+        grid-row: 1/2;
     }
 
     #social {
-        grid-column: 2/3;
+        grid-row: 2/3;
     }
 }
